Fix nav menu z-index

--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -276,6 +276,7 @@ a._cls-nostyle {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    z-index: 1;
   }
 }
 
